bloonix-webgui (0.61) released at 2015-08-20

    * Kicked '#' from the string list for the password generation in
      init-database.sh
    * Fixed double creation of table lock_srvchk.

bloonix-webgui (0.60) released at 2015-08-15

    * Fixed alter/rename syntax for mysql upgrade.

bloonix-webgui (0.59) released at 2015-08-14

    * Bloonix-Agent documentation updated and described how to
      configure checks to execute via sudo.

bloonix-webgui (0.58) released at 2015-08-06

    * Heavy changes in the schema of bloonix and re-designed
      the notification handling.

bloonix-webgui (0.57) released at 2015-06-23

    * Added new WTRM features: doSwitchToNewPage and doSwitchToMainPage.

bloonix-webgui (0.56) released at 2015-06-22

    * Added new WTRM features: doTriggerEvent, doSwitchToFrame,
      doSwitchToParentFrame, doDumpContent and doDumpFrameContent.

bloonix-webgui (0.55) released at 2015-06-20

    * Fixed service chart creation on the dashboard.

bloonix-webgui (0.54) released at 2015-06-20

    * Improved random string generation in sha256 and sha512.

bloonix-webgui (0.53) released at 2015-06-20

    * The sub navigations of administration/groups and contactgroups
      was hidden.

bloonix-webgui (0.52) released at 2015-06-17

    * Added new feature to the dashboard to show or hide the legend
      of charts.

bloonix-webgui (0.51) released at 2015-06-17

    * Kicked vertical navigation.
    * Fixed background color of body.

bloonix-webgui (0.50) released at 2015-06-16

    * Fixed "CASCADE NULL" in schema-pg.sql.

bloonix-webgui (0.49) released at 2015-06-10

    * Fixed the error handling of the login page.
    * Fixed font-weight in the top navigation.
    * Implemnted a data retention as company param that has
      a higher priority as the data retention of a host.
    * Fixed column variables of company for company id 1.

bloonix-webgui (0.48) released at 2015-05-01

    * Default font-weight set to normal.
